fixing jump height

--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     background-image: url("img/background.jpg");
     background-repeat: no-repeat;
     background-size:cover;
+    font-family: 'zabars' , Arial, Helvetica, sans-serif;
+}
+
+body div {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: 'zabars' , Arial, Helvetica, sans-serif;
+    margin-top: 100px;
 }
 
 h1 {
     font-size: 64px;
+    letter-spacing: 10px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 canvas {
